--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
                 <img class="card-img-top" src="src/imagenes/0.png" alt="">
             </div>
             <div class="col-9 col-sm-4 col-md-4 m-5">
+                <img class="card-img-top" src="src/imagenes/Gomez-Agustin.png" alt="">
+            </div>
+            <div class="col-9 col-sm-4 col-md-4 m-5">
                 <img class="card-img-top" src="src/imagenes/wordpress.jpg" alt="">
             </div>
             <div class="col-9 col-sm-4 col-md-4 m-5">
